@@ -3,12 +3,12 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [package]
-name = "rand_sfc"
+name = "sfc-prng"
 version = "0.1.5"
 edition = "2024"
 rust-version = "1.85.0"
 description = "Chris Doty-Humphrey's SFC PRNGs"
-documentation = "https://docs.rs/rand_sfc"
+documentation = "https://docs.rs/sfc-prng"
 repository = "https://github.com/sorairolake/sfc-rs"
 license = "Apache-2.0 OR MIT"
 keywords = ["random", "rng", "sfc"]
