@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.5\...HEAD[Unreleased]
+
+=== Changed
+
+* Rename crate to `sfc-prng` ({pull-request-url}/75[#75])
+
 == {compare-url}/v0.1.4\...v0.1.5[0.1.5] - 2025-08-22
 
 === Changed
